--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -18,6 +18,8 @@ jobs:
         with:
           github_user_name: Jayesh2007-JS
           outputs: dist/snake.svg
+          snake_color: '#00FF00'
+          background: '#000000'
 
       - name: Push snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
